# msg_status_effect

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md
.claude/: ralph-loop.local.md  settings.local.json
examples/: basic_usage.rs
src/: lib.rs
