[package]
name = "msg_status_effect"
version = "0.1.0"
edition = "2024"
authors = ["ffmulks <63452434+ffmulks@users.noreply.github.com>"]
description = "Generic status effect system with configurable scaling for Bevy games"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MolecularSadism/msg_status_effect"
keywords = ["bevy", "gamedev", "status-effect", "rpg", "ecs"]
categories = ["game-development"]
readme = "README.md"

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_log"] }
bevy_enum_event = "0.2"
serde = { version = "1.0", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(bevy_lint)",
] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
